--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Константин Волобуев - сайт визитка</title>
-    <link rel="stylesheet" href = "https://github.com/Skilletron/skilletron.github.io/blob/main/css/style.css">
+    <link rel="stylesheet" href = "css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
 </head>
@@ -32,6 +32,11 @@
         <main>
             <div class = "me_img">
                 <img src = "img/me.jpg.png" width = 300px>
+                
+                <div class = "me_info">
+                    <span class="me_info_title">Константин Волобуев</span>
+                    <span>Здравствуйте, меня зовут Константин, с ранних лет заинтересовался программированием, впервые начал разрабатывать мобильные приложения на C# в 15 лет, после 3 лет обучения набрался опыта и смог сделать свое первое коммерческое приложение для платформы Android , которое было опубликован в Play Market. Мне также пришлось изучить основы UI/UX при разработке игр для платформы Android.Также не могу не сказать, что во время учебы в колледже я изучил основы проектирования и создания баз данных с помощью PHPmyAdmin SQL запросов к базе данных. На данный момент живу в России, но при необходимости готов переехать в другие страны </span>
+                </div>
             </div>
         </main>
     </content>
