--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Константин Волобуев - сайт визитка</title>
-    <link rel="stylesheet" href = "https://github.com/Skilletron/skilletron.github.io/tree/main/css/style.css">
+    <link rel="stylesheet" href = "skilletron.github.io/tree/main/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
 </head>
