--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://github.com/Skilletron/skilletron.github.io/blob/main/css/contact.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="www.github.com/Skilletron/skilletron.github.io/blob/main/js/jquery.scrollTo.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://github.com/Skilletron/skilletron.github.io/blob/main/js/jquery.scrollTo.js"></script>
 </head>
 
 <body>
