--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Константин Волобуев - сайт визитка</title>
-    <link rel="stylesheet" href="https://github.com/Skilletron/skilletron.github.io/blob/main/css/style.css">
-    <link rel="stylesheet" href="https://github.com/Skilletron/skilletron.github.io/blob/main/css/bar.css">
-    <link rel="stylesheet" href="https://github.com/Skilletron/skilletron.github.io/blob/main/css/education.css">
-    <link rel="stylesheet" href="https://github.com/Skilletron/skilletron.github.io/blob/main/css/portfolio.css">
-    <link rel="stylesheet" href="https://github.com/Skilletron/skilletron.github.io/blob/main/css/contact.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="www.github.com/Skilletron/skilletron.github.io/blob/main/css/style.css">
+    <link rel="stylesheet" href="www.github.com/Skilletron/skilletron.github.io/blob/main/css/bar.css">
+    <link rel="stylesheet" href="www.github.com/Skilletron/skilletron.github.io/blob/main/css/education.css">
+    <link rel="stylesheet" href="www.github.com/Skilletron/skilletron.github.io/blob/main/css/portfolio.css">
+    <link rel="stylesheet" href="www.//github.com/Skilletron/skilletron.github.io/blob/main/css/contact.css">
+    <link rel="preconnect" href="www.fonts.gstatic.com">
+    <link href="www.fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
+    <script src=www.ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="www.github.com/Skilletron/skilletron.github.io/blob/main/js/jquery.scrollTo.js"></script>
 </head>
 
@@ -46,7 +46,7 @@
             <div class="main-container" id="about_me">
 
                 <div class="me_img">
-                    <img src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/me.jpg.png" width=300px>
+                    <img src="www.github.com/Skilletron/skilletron.github.io/blob/main/img/me.jpg.png" width=300px>
                     <div class="me_card">
                         <ul>
                             <br></br>
@@ -144,11 +144,11 @@
             <span>Образование</span>
         </div>
         <div class="text-container-education">
-            <img class="picture_education" src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/education.png" height="60px" width="60px">
+            <img class="picture_education" src="www.github.com/Skilletron/skilletron.github.io/blob/main/img/education.png" height="60px" width="60px">
             <span class=text_education>Неполное среднее образование<br>
                 <span class="date">2018-2022</span></span>
 
-            <img class="picture_education" src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/education.png" height="60px" width="60px">
+            <img class="picture_education" src="www.github.com/Skilletron/skilletron.github.io/blob/main/img/education.png" height="60px" width="60px">
             <span class=text_education>Ростовский-на-дону колледж связи и информатики<br>
                 <span class="date">2018-2022</span><br>
                 <span class="specialization">Техник-программист</span>
@@ -161,25 +161,25 @@
     <div class="container-portfolio">
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
-                href="https://play.google.com/store/apps/details?id=com.Skilletron.TapDownTree"> <img src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/icon.png"
+                href="https://play.google.com/store/apps/details?id=com.Skilletron.TapDownTree"> <img src="www.github.com/Skilletron/skilletron.github.io/blob/main/img/icon.png"
                     width="100px"></a><br>
             <span class="card_info">Tap Down Tree</span>
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
-                href="https://play.google.com/store/apps/details?id=com.TDM.TapDownTree2"><img src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/icon_2.png"
+                href="https://play.google.com/store/apps/details?id=com.TDM.TapDownTree2"><img src="www.github.com/Skilletron/skilletron.github.io/blob/main/img/icon_2.png"
                     width="100px"></a><br>
             <span class="card_info">Tap Down Tree 2</span>
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
-                href="https://play.google.com/store/apps/details?id=com.TDM.CalculatorDarts"><img src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/icon_3.PNG"
+                href="https://play.google.com/store/apps/details?id=com.TDM.CalculatorDarts"><img src="www.github.com/Skilletron/skilletron.github.io/blob/main/img/icon_3.PNG"
                     width="100px"></a><br>
             <span class="card_info">Darts Calculator</span>
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
-                href="https://play.google.com/store/apps/details?id=com.Skilletron.TrashMan"><img src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/icon_4.PNG"
+                href="https://play.google.com/store/apps/details?id=com.Skilletron.TrashMan"><img src=www.github.com/Skilletron/skilletron.github.io/blob/main/img/icon_4.PNG"
                     width="100px"></a><br>
             <span class="card_info_tm">Trash Man</span>
         </div>
@@ -190,12 +190,12 @@
     </div>
     <div class="container-contact">
         <div class="contact_me" id="contact">
-            <a target="blank" href="https://vk.com/skilletron" id="contact"><img src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/vk.png" width="40px"></a>
-            <a target="blank" href="https://wa.me/+79198710661" id="contact"><img src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/whatsapp.png"
+            <a target="blank" href="https://vk.com/skilletron" id="contact"><img src="www.github.com/Skilletron/skilletron.github.io/blob/main/img/vk.png" width="40px"></a>
+            <a target="blank" href="https://wa.me/+79198710661" id="contact"><img src="www.github.com/Skilletron/skilletron.github.io/blob/main/img/whatsapp.png"
                     width="40px"></a>
-            <a target="blank" href="tg://resolve?domain=@username_skilletron" id="contact"><img src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/tg.png"
+            <a target="blank" href="tg://resolve?domain=@username_skilletron" id="contact"><img src="www.github.com/Skilletron/skilletron.github.io/blob/main/img/tg.png"
                     width="40px"></a>
-            <a target="blank" href="mailto:forestskilletron@gmail.com" id="contact"><img src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/gmail.png"
+            <a target="blank" href="mailto:forestskilletron@gmail.com" id="contact"><img src="www.github.com/Skilletron/skilletron.github.io/blob/main/img/gmail.png"
                     width="40px"></a>
             <a target="blank" href="https://www.linkedin.com/in/konstantin-volobuev-ab74461b0/" id="contact"><img
                     src="https://github.com/Skilletron/skilletron.github.io/blob/main/img/linkedin.png" width="40px"></a>
