--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.scrollTo.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="js/jquery.scrollTo.js"></script>
 </head>
 
 <body>
@@ -173,13 +173,13 @@
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
-                href="https://play.google.com/store/apps/details?id=com.TDM.CalculatorDarts"><img src="img/icon_3.PNG"
+                href="https://play.google.com/store/apps/details?id=com.TDM.CalculatorDarts"><img src="img/icon_3.png"
                     width="100px"></a><br>
             <span class="card_info">Darts Calculator</span>
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
-                href="https://play.google.com/store/apps/details?id=com.Skilletron.TrashMan"><img src="img/icon_4.PNG"
+                href="https://play.google.com/store/apps/details?id=com.Skilletron.TrashMan"><img src="img/icon_4.png"
                     width="100px"></a><br>
             <span class="card_info_tm">Trash Man</span>
         </div>
