--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
 <body>
     <header class="header">
-        <div class=content>
-            <div class="logo">
+        <div class=content_header>
+            <div class="logo_header">
                 <a href="#"><span class="header_text_name">КВ</span></a>
             </div>
-            <div class="info">
+            <div class="info_header">
                 <span class="header_text_name">Я Константин Волобуев
                     <p class="header_text_spec">Техник-программист</p>
                     <p><button class="hire_btn" onclick="location.href='mailto:forestskilletron@gmail.com'">Найми
                             меня</button></p>
                 </span>
             </div>
-            <div class=nav>
+            <div class=nav_header>
                 <a class="left-menu" href="#about_me">Обо мне</a>
                 <a class="left-menu" href="#skills">Навыки</a>
                 <a class="left-menu" href="#education">Образование</a>
@@ -39,14 +39,11 @@
             </div>
         </div>
     </header>
-    <content>
-
-        <main>
 
             <div class="main-container" id="about_me">
 
                 <div class="me_img">
-                    <img src="img/me.jpg.png" width=300px>
+                    <img src="img/me.jpg.png" width=380vw>
                     <div class="me_card">
                         <ul>
                             <br></br>
@@ -83,17 +80,18 @@
                             </li>
                         </ul>
                     </div>
+                    
                 </div>
-
                 <div class="me_info">
                     <span class="me_info_title">Константин Волобуев</span>
                     <br></br>
                     <br><span class="me_info_description">C ранних лет заинтересовался программированием,
                         впервые начал разрабатывать мобильные приложения на C# в 15 лет, после 2 лет обучения
-                        набрался опыта и смог сделать свое первое коммерческое приложение для платформы Android ,
-                        которое было опубликован в Play Market. Мне также пришлось изучить основы UI/UX при
+                        набрался опыта и смог сделал свое первое коммерческое приложение для платформы Android ,
+                        которое было опубликован в Play Market,на данный момент развиваюсь в отрасли WEB
+                        ,имею базовые знания html,css,flexbox,js. Мне также пришлось изучить основы UI/UX при
                         разработке игр для платформы Android.Также не могу не сказать, что во время учебы в колледже
-                        я изучил основы проектирования и создания баз данных с помощью PHPmyAdmin SQL запросов к
+                        я изучил основы проектирования и создания баз данных с помощью PHPmyAdmin,SQL запросов к
                         базе данных. На данный момент живу в России, но при необходимости готов переехать в другие
                         страны </span><br>
                     <br></br>
@@ -133,25 +131,25 @@
                     <div class="greyProgress_8">
                         <div class="bar_8"></div>
                     </div>
+                
                 </div>
             </div>
             </div>
-        </main>
-    </content>
+
 
     <div class="container-education" id="education">
         <div class="title_education">
             <span>Образование</span>
         </div>
         <div class="text-container-education">
-            <img class="picture_education" src="img/education.png" height="60px" width="60px">
+            <img class="picture_education" src="img/education.png" height="80vw" width="80vw">
             <span class=text_education>Неполное среднее образование<br>
-                <span class="date">2018-2022</span></span>
+                <span >2018-2022</span></span>
 
-            <img class="picture_education" src="img/education.png" height="60px" width="60px">
+            <img class="picture_education" src="img/education.png" height="80vw" width="80vw">
             <span class=text_education>Ростовский-на-дону колледж связи и информатики<br>
-                <span class="date">2018-2022</span><br>
-                <span class="specialization">Техник-программист</span>
+                <span >2018-2022</span><br>
+                <span>Техник-программист</span>
             </span>
         </div>
     </div>
@@ -162,26 +160,26 @@
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.Skilletron.TapDownTree"> <img src="img/icon.png"
-                    width="100px"></a><br>
-            <span class="card_info">Tap Down Tree</span>
+                    width="150vw"></a><br>
+                <span>Tap Down Tree</span>
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.TDM.TapDownTree2"><img src="img/icon_2.png"
-                    width="100px"></a><br>
-            <span class="card_info">Tap Down Tree 2</span>
+                    width="150vw"></a><br>
+            <span >Tap Down Tree 2</span>
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.TDM.CalculatorDarts"><img src="img/icon_3.PNG"
-                    width="100px"></a><br>
-            <span class="card_info">Darts Calculator</span>
+                    width="150vw" height="150vw"></a><br>
+            <span >Darts Calculator</span>
         </div>
         <div class="portfolio_card">
             <a id="a_portfolio" class="portfolio_click"
                 href="https://play.google.com/store/apps/details?id=com.Skilletron.TrashMan"><img src="img/icon_4.PNG"
-                    width="100px"></a><br>
-            <span class="card_info_tm">Trash Man</span>
+                    width="150vw"></a><br>
+            <span >Trash Man</span>
         </div>
 
     </div>
@@ -190,15 +188,15 @@
     </div>
     <div class="container-contact">
         <div class="contact_me" id="contact">
-            <a target="blank" href="https://vk.com/skilletron" id="contact"><img src="img/vk.png" width="40px"></a>
+            <a target="blank" href="https://vk.com/skilletron" id="contact"><img src="img/vk.png" width="80vw"></a>
             <a target="blank" href="https://wa.me/+79198710661" id="contact"><img src="img/whatsapp.png"
-                    width="40px"></a>
+                    width="80vw"></a>
             <a target="blank" href="tg://resolve?domain=@username_skilletron" id="contact"><img src="img/tg.png"
-                    width="40px"></a>
+                    width="80vw"></a>
             <a target="blank" href="mailto:forestskilletron@gmail.com" id="contact"><img src="img/gmail.png"
-                    width="40px"></a>
+                    width="80vw"></a>
             <a target="blank" href="https://www.linkedin.com/in/konstantin-volobuev-ab74461b0/" id="contact"><img
-                    src="img/linkedin.png" width="40px"></a>
+                    src="img/linkedin.png" width="80vw"></a>
         </div>
     </div>
     <script type="text/javascript">
