--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 набрался опыта и смог сделал свое первое коммерческое приложение для платформы Android ,
                 которое было опубликован в Play Market,на данный момент развиваюсь в отрасли WEB
                 ,имею базовые знания html,css,flexbox,js. Мне также пришлось изучить основы UI/UX при
-                разработке игр для платформы Android.Также не могу не сказать, что во время учебы в колледже
+                разработке игр для платформы Android.Также можно отметить,что во время учебы в колледже
                 я изучил основы проектирования и создания баз данных с помощью PHPmyAdmin,SQL запросов к
                 базе данных. На данный момент живу в России, но при необходимости готов переехать в другие
                 страны </span><br>
