--- a/index.html
+++ b/index.html
@@ -189,15 +189,17 @@
     <div id="contact" class="container-contact">
         <div class="contact_me_column" id="contact">
             <div class="contact_me">
-                <a target="blank" href="https://vk.com/skilletron" id="contact"><img src="img/vk.png" width="80vw"></a>
+                <a target="blank" href="https://vk.com/skilletron" id="contact"><img src="img/vk.png" width="80vw"alt='vk'title="VK"></a>
                 <a target="blank" href="https://wa.me/+79198710661" id="contact"><img src="img/whatsapp.png"
-                        width="80vw"></a>
+                        width="80vw"alt='whatsapp'title="Whatsapp"></a>
                 <a target="blank" href="tg://resolve?domain=@username_skilletron" id="contact"><img src="img/tg.png"
-                        width="80vw"></a>
+                        width="80vw"alt='telegram'title="Telegram"></a>
                 <a target="blank" href="mailto:forestskilletron@gmail.com" id="contact"><img src="img/gmail.png"
-                        width="80vw"></a>
+                        width="80vw"alt='gmail'title="Gmail"></a>
                 <a target="blank" href="https://www.linkedin.com/in/konstantin-volobuev-ab74461b0/" id="contact"><img
-                        src="img/linkedin.png" width="80vw"></a>
+                        src="img/linkedin.png" width="80vw"alt='linkedin' title="Linkedin"></a>
+                        <a target="blank" href="https://github.com/Skilletron" id="contact"><img
+                            src="img/github.png" width="80vw" alt='github' title="Github"></a>
             </div>
         </div>
     </div>
