--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="main-container" id="about_me">
 
         <div class="me_img">
-            <img src="img/me.jpg.png" width="400vw" height=400vw style="border:4px solid rgb(35, 129, 223);">
+            <img src="img/me.jpg.png" width="400vw" height="400vw";
             <div class="me_card">
                 <ul>
                     <br></br>
